pygobject (3.7.92-3) UNRELEASED; urgency=low

  * Add 01_cairo_region.patch: Add a foreign type for cairo_region_t.
    (LP: #1028115, bgo #667959)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 22 Mar 2013 07:11:51 +0100

pygobject (3.7.92-2) experimental; urgency=low

  * debian/control.in:
    + Bump gobject-introspection packages minimum build dependency
      in an attempt to fix the test suite in the buildds where it's
      currently hanging.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 19 Mar 2013 14:06:39 +0100

pygobject (3.7.92-1) experimental; urgency=low

  * New upstream release.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 18 Mar 2013 20:59:27 +0100

pygobject (3.7.91.1-1) experimental; urgency=low

  * New upstream release.
    - Works nicely with GLib >= 2.35.4. Closes: #702603.
    - debian/control.in:
      + Update build dependencies.
  * debian/python3-gi.lintian-overrides:
    - Also override dev-pkg-without-shlib-symlink for python3-gi.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 12 Mar 2013 14:30:53 +0100

pygobject (3.4.2-3) experimental; urgency=low

  [ Martin Pitt ]
  * debian/control.in: Make python-gi-dev Arch: any, as it now uses multiarch
    paths for the pkg-config file.
  * debian/control.in: Put transitional packages into section oldlibs, and
    priority extra. Thanks lintian.
  * debian/control.in: Fix non-bin-NMUable dependency of python-gobject-dev.
  * Add lintian overrides to suppress the package-name-doesnt-match-sonames
    warnings.
  * Add lintian override for "dbg-package-missing-depends python-gobject-dbg";
    this is a transitional package only.
  * Bump g-i build dependency to >= 1.34.2 to ensure the tests are working.
  * Add autopkgtests for the -dbg flavours of Python 2 and 3.
  * debian/control.in: Have python-gi-dev depend on python3-gi, too.
    (LP: #1101683)

  [ Josselin Mouette ]
  * Enable again gtk3 on m68k.